--- a/breathe.css
+++ b/breathe.css
@@ -30,7 +30,7 @@ transition: 0.65s;
   text-align: center;
 }
 
-.card-header, .dropdown-item, .nav-link {
+.card-header, .dropdown-item, .nav-link, .btn {
   text-shadow: 0px 0px 12px #fff;
 }
 
@@ -41,4 +41,8 @@ transition: 0.65s;
 .btn:hover{
   color: #fff;
   text-shadow: 1px 1px 12px #ffffff;
+}
+
+.dropdown-menu a:hover{
+  background-color: rgba(0, 0, 0, 0.7);
 }
