added border colors

--- a/breathe.css
+++ b/breathe.css
@@ -17,6 +17,7 @@ text-shadow: 0px 0px 12px #fff;
 object-fit: contain;
 border-style: ridge;
 border-radius: 10px;
+border-color: white;
 }
 
 
@@ -49,12 +50,10 @@ width: fit-content;
   background-color: rgba(0, 0, 0, 0.7);
 }
 
-.meme{
-  max-width: 100%;
-}
 
 .meme .carousel-item{
   max-width: 100%;
+
 }
 
 .imahe{
